--- a/public/sass/index.scss
+++ b/public/sass/index.scss
@@ -1,3 +1,14 @@
-div {
-  margin: 0;
+.image-tile {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  & img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
 }
